--- a/HocRetrofit/app/build.gradle
+++ b/HocRetrofit/app/build.gradle
@@ -41,4 +41,5 @@ dependencies {
     implementation 'com.squareup.okhttp3:okhttp:4.9.2'
     implementation 'androidx.recyclerview:recyclerview:1.2.1'
     implementation 'com.github.bumptech.glide:glide:4.12.0'
+    implementation("androidx.swiperefreshlayout:swiperefreshlayout:1.1.0")
 }
